<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="team_bam.virtualchef.CreateActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorAccent"
        android:layout_margin="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/colorAccent"
            android:weightSum="3">
            <Button
                android:id="@+id/btn_search"
                android:text="@string/chooseSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_home"
                android:text="@string/chooseHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/colorAccent">
            <TextView
                android:id="@+id/txt_displayRecipeName"
                android:text="Recipe Name"
                android:textSize="18sp"
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_displayRecipeType"
                android:text="Recipe Type"
                android:textSize="18sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_displayServingSize"
                android:text="Size"
                android:textSize="18sp"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:id="@+id/txt_ingredients"
            android:text="@string/ingredients"
            android:textSize="18sp"
            android:background="@color/colorButton"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ScrollView
            android:background="@color/colorScrollBackground"
            android:layout_width="match_parent"
            android:layout_height="120dp">
            <TextView
                android:id="@+id/txt_displayIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>
        <TextView
            android:id="@+id/txt_procedure"
            android:text="@string/addProcedure"
            android:textSize="18sp"
            android:background="@color/colorButton"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ScrollView
            android:background="@color/colorScrollBackground"
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <TextView
                android:id="@+id/txt_displayProcedures"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>
    </LinearLayout>
</LinearLayout>
